@@ -25,6 +25,7 @@ GtkWidget* ptk_location_view_new( PtkFileBrowser* file_browser );
 GtkWidget* ptk_bookmark_view_new( PtkFileBrowser* file_browser );
 
 gboolean ptk_location_view_chdir( GtkTreeView* location_view, const char* path );
+gboolean ptk_bookmark_view_chdir( GtkTreeView* bookmark_view, const char* path );
 
 char* ptk_location_view_get_selected_dir( GtkTreeView* location_view );
 char* ptk_bookmark_view_get_selected_dir( GtkTreeView* bookmark_view );
