@@ -18,6 +18,7 @@
     path bar cmd history in completion popup
     path bar instance-wide cmd history
     path bar breadcrumbs on click no ctrl
+    un/select bookmarks and devices on change dir #259
 0.8.5   2013-01-14:
     fix left-click ignored in Open context submenu #31 #228
     Dialog fix progress bar; add auto-pulse
